proyecto2 initial commit

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "workspaces": [
     "proyecto1",
-    "proyecto2"
+    "proyecto2",
+    "mylib"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
