--- a/proyecto2/package.json
+++ b/proyecto2/package.json
@@ -2,17 +2,17 @@
   "name": "proyecto2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "build": "rm -rf ./build && tsc",
-    "start": "npm run build && node build/index.js",
+    "build": "rm -rf ./dist && tsc",
+    "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
